objects/TSS_StickIt_MR1__StickIt_Label_Set__c.object
<CustomObject>
    <fields>
        <fullName>TSS_StickIt_MR1__Label_10__c</fullName>
        <description>Salesforce Id of the Document record associated with the label template.</description>
        <inlineHelpText>Salesforce Id of the Document record associated with the label template.</inlineHelpText>
        <label>Label 10</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TSS_StickIt_MR1__Label_1__c</fullName>
        <description>Salesforce Id of the Document record associated with the label template.</description>
        <inlineHelpText>Salesforce Id of the Document record associated with the label template.</inlineHelpText>
        <label>Label 1</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TSS_StickIt_MR1__Label_2__c</fullName>
        <description>Salesforce Id of the Document record associated with the label template.</description>
        <inlineHelpText>Salesforce Id of the Document record associated with the label template.</inlineHelpText>
        <label>Label 2</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TSS_StickIt_MR1__Object__c</fullName>
        <description>Salesforce Object (API Name) this Label Set is assigned to.</description>
        <inlineHelpText>Salesforce Object (API Name) this Label Set is assigned to.</inlineHelpText>
        <label>Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>StickIt Label Set</label>
    <listViews>
        <fullName>TSS_StickIt_MR1__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Label Set Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>StickIt Label Sets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>